# meltSubtitles

./: .gitignore  .travis.yml  README.md  README.rst  bojack.horseman.s01e01.720p.webrip.x264-w4f.英文.srt  main.py  pyproject.toml  setup.py  test_funs.py  tox.ini  utils.py  wordsRepoProc.py
bojack/: bojack.horseman.s01e01.720p.webrip.x264-w4f.英文.wordch.srt
meltsubtitles/: main.py  requirements.txt  utils.py  wordsRepoProc.py
meltsubtitles/subtitleParser/: sstparser.py
subtitleParser/: sstparser.py
test/: test.py
test/data/: data1.wordch.srt
tests/: test_main.py
tests/data/: data1.srt
unfamilarWords/: unknown..word.ch.srt
wordsRepo/: en10000.csv  en5000x.csv
